--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ downloads/
 eggs/
 .eggs/
 lib/
-lib64/
+lib64
 parts/
 sdist/
 var/
@@ -25,6 +25,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+bin
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
